fixed spacing issue on tablets when clicking th emenu

--- a/css/core-styles.css
+++ b/css/core-styles.css
@@ -42,7 +42,13 @@ html {
 html.clicked {
     position: fixed;
 }
-  
+
+
+
+.container.clicked {
+    max-width: 100%;
+    width: 100%;
+}
 
 body, html {
 	margin: 0;
@@ -670,8 +676,12 @@ h2 span {
 /* Tablets */
 @media screen and (min-width: 500px) and (max-width: 1025px) {
 
+    main {
+        width: 100%;
+    }
+
     .container {
-        max-width: 700px;
+        max-width: 800px;
     }
 
     .mobile-nav {
