--- a/css/style.css
+++ b/css/style.css
@@ -1097,7 +1097,6 @@
 
     .container {
         width: 100%;
-        max-width: 700px;
     }
 
     .mobile-nav {
